// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwapModalHeader.tsx matches base snapshot, test trade exact input 1`] = `
<DocumentFragment>
  .c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: -webkit-wrap-content;
  width: -moz-wrap-content;
  width: wrap-content;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 12px;
}

.c4 {
  width: -webkit-wrap-content;
  width: -moz-wrap-content;
  width: wrap-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c10 {
  width: -webkit-wrap-content;
  width: -moz-wrap-content;
  width: wrap-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 0.5rem;
}

.c5 {
  color: #7780A0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 {
  display: grid;
  grid-auto-rows: auto;
  grid-row-gap: 0.5rem;
}

.c12 {
  width: 28px;
  height: 28px;
  border-radius: 50%;
  background: radial-gradient(white 60%,#ffffff00 calc(70% + 1px));
  box-shadow: 0 0 1px white;
}

.c11 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  display: inline-block;
  height: inherit;
}

.c6 {
  color: #7780A0;
  margin-right: 8px;
  max-width: 75%;
}

.c9 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c13 {
  margin: 0.75rem 0.125rem;
}

.c14 {
  border: none;
  border-bottom: 1px solid #D2D9EE;
  margin: 0 0;
  margin-bottom: 0px;
  margin-top: -1px;
  max-width: auto;
  width: auto;
}

<div
    class="c0"
    style="margin-top: 1rem;"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3 c4"
        width="wrap-content"
      >
        <div
          class="c5 css-1jljtub"
        >
          <span
            class="c6"
          >
            You pay
          </span>
        </div>
        <div
          class="c7"
        />
      </div>
      <div
        class="c8 c9"
      >
        <div
          class="c3 c10"
          width="wrap-content"
        >
          <div
            class="c11"
          >
            <img
              alt="ABC logo"
              class="c12"
              src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x0000000000000000000000000000000000000001/logo.png"
            />
          </div>
          <div
            class="css-1tiu9da"
            data-testid="input-amount"
          >
            &lt;0.00001 ABC
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 c2"
    >
      <div
        class="c3 c4"
        width="wrap-content"
      >
        <div
          class="c5 css-1jljtub"
        >
          <span
            class="c6"
          >
            You receive
          </span>
        </div>
        <svg
          fill="none"
          height="16"
          stroke="#7780A0"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="16"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="8"
            y2="8"
          />
        </svg>
        <div
          class="c7"
        />
      </div>
      <div
        class="c8 c9"
      >
        <div
          class="c3 c10"
          width="wrap-content"
        >
          <div
            class="c11"
          >
            <img
              alt="DEF logo"
              class="c12"
              src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x0000000000000000000000000000000000000002/logo.png"
            />
          </div>
          <div
            class="css-1tiu9da"
            data-testid="output-amount"
          >
            &lt;0.00001 DEF
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <hr
        class="c14"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwapModalHeader.tsx test trade exact output, no recipient 1`] = `
<DocumentFragment>
  .c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: -webkit-wrap-content;
  width: -moz-wrap-content;
  width: wrap-content;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 12px;
}

.c4 {
  width: -webkit-wrap-content;
  width: -moz-wrap-content;
  width: wrap-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c10 {
  width: -webkit-wrap-content;
  width: -moz-wrap-content;
  width: wrap-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 0.5rem;
}

.c5 {
  color: #7780A0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 {
  display: grid;
  grid-auto-rows: auto;
  grid-row-gap: 0.5rem;
}

.c12 {
  width: 28px;
  height: 28px;
  border-radius: 50%;
  background: radial-gradient(white 60%,#ffffff00 calc(70% + 1px));
  box-shadow: 0 0 1px white;
}

.c11 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  display: inline-block;
  height: inherit;
}

.c6 {
  color: #7780A0;
  margin-right: 8px;
  max-width: 75%;
}

.c9 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c13 {
  margin: 0.75rem 0.125rem;
}

.c14 {
  border: none;
  border-bottom: 1px solid #D2D9EE;
  margin: 0 0;
  margin-bottom: 0px;
  margin-top: -1px;
  max-width: auto;
  width: auto;
}

<div
    class="c0"
    style="margin-top: 1rem;"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3 c4"
        width="wrap-content"
      >
        <div
          class="c5 css-1jljtub"
        >
          <span
            class="c6"
          >
            You pay
          </span>
        </div>
        <div
          class="c7"
        />
      </div>
      <div
        class="c8 c9"
      >
        <div
          class="c3 c10"
          width="wrap-content"
        >
          <div
            class="c11"
          >
            <img
              alt="ABC logo"
              class="c12"
              src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x0000000000000000000000000000000000000001/logo.png"
            />
          </div>
          <div
            class="css-1tiu9da"
            data-testid="input-amount"
          >
            &lt;0.00001 ABC
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 c2"
    >
      <div
        class="c3 c4"
        width="wrap-content"
      >
        <div
          class="c5 css-1jljtub"
        >
          <span
            class="c6"
          >
            You receive
          </span>
        </div>
        <svg
          fill="none"
          height="16"
          stroke="#7780A0"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="16"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="8"
            y2="8"
          />
        </svg>
        <div
          class="c7"
        />
      </div>
      <div
        class="c8 c9"
      >
        <div
          class="c3 c10"
          width="wrap-content"
        >
          <div
            class="c11"
          >
            <img
              alt="GHI logo"
              class="c12"
              src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x0000000000000000000000000000000000000003/logo.png"
            />
          </div>
          <div
            class="css-1tiu9da"
            data-testid="output-amount"
          >
            &lt;0.00001 GHI
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <hr
        class="c14"
      />
    </div>
  </div>
</DocumentFragment>
`;
